# docs/swagger.json
@@ -169,6 +169,11 @@
         },
         "/api/v1/event/publish/{id}": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Publish Event",
                 "consumes": [
                     "application/json"
